Don't apply pagination offset for rounded clips outside of fragmentation.

This was broken by commit c3a3481. Before that commit, PaintLayerClipper
was not asked how to compute a clip *across* a pagination container, instead
stopping at the pagination container. Thus the case being fixed here was
never exhibited.

Bug: 778213
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I3c540e31fdf3b77d5a34fbdf08104d0490f9a1ea
Reviewed-on: https://chromium-review.googlesource.com/740379
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512284}
Former-commit-id: 1a1ad402c946c211865d9e1b4ee227da7ffdbf70